--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "io.mkg20001.arubanetworkslogin"
         minSdkVersion 15
         targetSdkVersion 28
-        versionCode 3000 // 003000
-        versionName "0.3"
+        versionCode 4000 // 004000
+        versionName "0.4"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -36,6 +36,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     // sentry'n'stuff
-    compile 'io.sentry:sentry-android:1.7.10'
-    compile 'org.slf4j:slf4j-nop:1.7.25'
+    implementation 'io.sentry:sentry-android:1.7.10'
+    implementation 'org.slf4j:slf4j-nop:1.7.25'
 }
